kubernetes/Backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ajax-backend-pod
  labels:
    app: ajax-backend-pod
spec:
  replicas: 0
  selector:
    matchLabels:
      app: ajax-backend-pod
  template:
    metadata:
      name: ajax-backend-pod
      labels:
        app: ajax-backend-pod
    spec:
      containers:
        - name: ajax-backend-pod
          image: docker.io/marcinator/ajax-backend:latest
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ajax-backend
spec:
  selector:
    app: ajax-backend-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
