kubernetes/Database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ajax-database-set
  labels:
    app: ajax-database-set
spec:
  serviceName: "mssql" # serviceName is the name of the service that governs this StatefulSet. This service must exist before the StatefulSet, and is responsible for the network identity of the set.
  replicas: 1 # only one pod, with one SQL Server instance deployed.
  selector:
    matchLabels:
      app: ajax-database-pod  # this has to be the same as .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: ajax-database-pod # this has to be the same as .spec.selector.matchLabels, as documented [here](https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/):
    spec:
      securityContext:
        fsGroup: 10001
      containers:
        - name: ajax-database-pod # container name within the pod.
          image: mcr.microsoft.com/mssql/server:2022-latest
          ports:
            - containerPort: 1433
              name: tcpsql
          volumeMounts:
            - name: mssql
              mountPath: "/var/opt/mssql"
  volumeClaimTemplates:
    - metadata:
        name: mssql
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 8Gi
---
apiVersion: v1
kind: Service
metadata:
  name: ajax-database
spec:
  selector:
    app: ajax-database-pod
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: LoadBalancer
