kubernetes/Frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ajax-frontend-pod
  labels:
    app: ajax-frontend-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ajax-frontend-pod
  template:
    metadata:
      name: ajax-frontend-pod
      labels:
        app: ajax-frontend-pod
    spec:
      containers:
        - name: ajax-frontend-pod
          image: docker.io/marcinator/ajax-frontend:latest
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
        
---
apiVersion: v1
kind: Service
metadata:
  name: ajax-frontend
spec:
  selector:
    app: ajax-frontend-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
